--- a/config/aerospace/aerospace.toml
+++ b/config/aerospace/aerospace.toml
@@ -85,7 +85,7 @@ on-focus-changed = "move-mouse window-lazy-center"
 4 = ['main', '^built-in retina display$']
 5 = ['main', '^built-in retina display$']
 6 = ['main', '^built-in retina display$']
-7 = ['secondary', 'main', '^built-in retina display$']
+7 = ['main', '^built-in retina display$']
 8 = ['secondary', 'main', '^built-in retina display$']
 9 = ['secondary', 'main', '^built-in retina display$']
 10 = ['secondary', 'main', '^built-in retina display$']
