--- a/config/sway/config
+++ b/config/sway/config
@@ -44,15 +44,15 @@ output * bg ~/Pictures/gruvbox-wallpapers/wallpapers/irl/Colors.png fill
 output DP-1 resolution 3840x2160  position 0,0
 output HDMI-A-1 resolution 3840x2160 position 3840,0
 
-set $output-primary DP-1
-set $output-secondary HDMI-A-1
+set $output-primary HDMI-A-1
+set $output-secondary DP-1
 
 workspace 1 output $output-primary
 workspace 2 output $output-primary
 workspace 3 output $output-primary
 workspace 4 output $output-primary
 workspace 5 output $output-primary
-workspace 6 output $output-secondary
+workspace 6 output $output-primary
 workspace 7 output $output-secondary
 workspace 8 output $output-secondary
 workspace 9 output $output-secondary
