--- a/config/kitty/general.conf
+++ b/config/kitty/general.conf
@@ -1,11 +1,12 @@
 include themes/gruvbox_dark_hard.conf
-
+#gruvbox my beloved
+# include kitty-themes/themes/kanagawa.conf
 
 # Fonts
 # kitty list-fonts
 # disable_ligatures never
 # https://github.com/ryanoasis/nerd-fonts/releases/download/v3.3.0/NerdFontsSymbolsOnly.zip
-symbol_map U+23FB-U+23FE,U+2665,U+26A1,U+2B58,U+E000-U+E00A,U+E0A0-U+E0A3,U+E0B0-U+E0C8,U+E0CA,U+E0CC-U+E0D2,U+E0D4,U+E200-U+E2A9,U+E300-U+E3E3,U+E5FA-U+E634,U+E700-U+E7C5,U+EA60-U+EBEB,U+F000-U+F2E0,U+F300-U+F32F,U+F400-U+F4A9,U+F500-U+F8FF Symbols Nerd Font Mono
+# symbol_map U+23FB-U+23FE,U+2665,U+26A1,U+2B58,U+E000-U+E00A,U+E0A0-U+E0A3,U+E0B0-U+E0C8,U+E0CA,U+E0CC-U+E0D2,U+E0D4,U+E200-U+E2A9,U+E300-U+E3E3,U+E5FA-U+E634,U+E700-U+E7C5,U+EA60-U+EBEB,U+F000-U+F2E0,U+F300-U+F32F,U+F400-U+F4A9,U+F500-U+F8FF Symbols Nerd Font Mono
 
 window_padding_width 4
 
@@ -15,7 +16,7 @@ cursor none
 disable_ligatures cursor
 
 # background
-background_opacity .83
+background_opacity .85
 dynamic_background_opacity yes
 
 # Misc
