--- a/config/kitty/mappings.conf
+++ b/config/kitty/mappings.conf
@@ -55,3 +55,12 @@ map kitty_mod+a>l set_background_opacity -0.1
 # To increase opacity: Press Cmd + Shift + a, then press m.
 # To decrease opacity: Press Cmd + Shift + a, then press l.
 
+# aerospace compability
+# we don't want to pass this to shell
+# map cmd+n     discard_event
+# The actual way to unmap a shortcut is to set the key map to no_op. For example:
+#
+# map ctrl+shift+r no_op
+# discard_event stops the event from propagating period, so the running program never receives it.
+map cmd+enter discard_event
+map alt+enter discard_event
