--- a/config/kitty/kitty-macos.conf
+++ b/config/kitty/kitty-macos.conf
@@ -1,19 +1,28 @@
 include general.conf
 kitty_mod cmd+shift
+macos_option_as_alt yes
 include mappings.conf
+# aerospace compability
+# we don't want to pass this to shell
+# map cmd+n     discard_event
+# The actual way to unmap a shortcut is to set the key map to no_op. For example:
+#
+# map ctrl+shift+r no_op
+# discard_event stops the event from propagating period, so the running program never receives it.
+map cmd+enter discard_event
+map alt+enter discard_event
 
 editor /opt/homebrew/bin/nvim
 scrollback_pager /opt/homebrew/bin/nvim -c "lua require('util').colorize()"
 
 background_blur 32
-macos_option_as_alt yes
 window_padding_width 8
 hide_window_decorations titlebar-only
 macos_show_window_title_in none
 macos_titlebar_color system
 macos_colorspace displayp3
 
-font_size 12.0
+font_size 11.0
 font_family Fira Code
 bold_font Fira Code Bold
 italic_font Maple Mono NF Italic
