--- a/config/sway/config
+++ b/config/sway/config
@@ -166,6 +166,11 @@ bindsym $mod+$down focus down
 bindsym $mod+$up focus up
 bindsym $mod+$right focus right
 
+bindsym $mod+Left focus left
+bindsym $mod+Down focus down
+bindsym $mod+Up focus up
+bindsym $mod+Right focus right
+
 
 bindsym alt+Shift+j nop swap_with_next_window
 bindsym alt+Shift+k nop swap_with_prev_window
@@ -178,6 +183,12 @@ bindsym $mod+Shift+$left nop move left
 bindsym $mod+Shift+$down nop move down
 bindsym $mod+Shift+$up nop move up
 bindsym $mod+Shift+$right nop move right
+
+bindsym $mod+Shift+Left nop move left
+bindsym $mod+Shift+Down nop move down
+bindsym $mod+Shift+Up nop move up
+bindsym $mod+Shift+Right nop move right
+
 
 # bindsym alt+shift+$left nop reflectx, focus left, swap container with mark swap
 # bindsym alt+shift+$down mark swap, focus down, swap container with mark swap
