Open new tab in cwd

--- a/config/kitty/mappings.conf
+++ b/config/kitty/mappings.conf
@@ -2,7 +2,7 @@ map f2 launch --cwd=current --location=vsplit lazygit
 map f3 launch --cwd=current --location=vsplit ranger
 map ctrl+tab        next_tab
 map ctrl+shift+tab previous_tab
-map kitty_mod+t new_tab
+map kitty_mod+t new_tab_with_cwd
 #: Move tab forward
 map kitty_mod+. move_tab_forward
 #: Move tab backward
