style changes, catppuccin-mocha

--- a/config/kitty/general.conf
+++ b/config/kitty/general.conf
@@ -1,6 +1,9 @@
-include themes/gruvbox_dark_hard.conf
+# include themes/gruvbox_dark_hard.conf
+# include themes/catppuccin-macchiato.conf
 #gruvbox my beloved
 # include kitty-themes/themes/kanagawa.conf
+# include kitty-themes/themes/Catppuccin-Macchiato.conf
+include kitty-themes/themes/Catppuccin-Mocha.conf
 
 # Fonts
 # kitty list-fonts
@@ -41,3 +44,4 @@ input_delay 0
 repaint_delay 2
 sync_to_monitor no
 wayland_enable_ime no
+
