--- a/config/sway/config
+++ b/config/sway/config
@@ -6,11 +6,18 @@
 
 ### Wallpaper
 # output * bg ~/Pictures/gruvbox-wallpapers/wallpapers/pixelart/image16.png fill
-#
+output * bg ~/Pictures/catppuccin/catppuccin_cat.png fill
+
 # Using irl/Colors.png wallpaper until I can setup swayFX
 # output * bg ~/Pictures/gruvbox-wallpapers/wallpapers/irl/Colors.png fill
-output * bg ~/Pictures/gruvbox-wallpapers/wallpapers/irl/woods.jpg fill
-
+# output * bg ~/Pictures/gruvbox-wallpapers/wallpapers/anime/wall.jpg fill
+# output * bg ~/Pictures/gruvbox-wallpapers/wallpapers/irl/woods.jpg fill
+# output * bg ~/Pictures/gruvbox-wallpapers/wallpapers/irl/bulbs.jpg fill
+# output * bg ~/Pictures/gruvbox-wallpapers/wallpapers/minimalistic/PJbX0MG.png fill
+# output * bg ~/Pictures/macos/wp10117191-macos-dark-wallpapers.jpg fill
+# output * bg ~/Pictures/swaybg/fall_nature_joey_jazz.png fill
+# output * bg ~/Pictures/swaybg/mountain_retreat_u_scaredpie.jpg fill
+# output * bg ~/Pictures/swaybg/camera-1130731.jpg fill
 ### Output configuration
 
 ### Idle configuration
@@ -350,7 +357,7 @@ default_border pixel 4
 # smart_borders on 
 #
 # gruvbox borders - green
-client.focused #8ec07c #8ec07c #665c54 #8ec07c
+# client.focused #8ec07c #8ec07c #665c54 #8ec07c
 
 # gruvbox borders - blue 
 # client.focused #83a598 #83a598 #665c54 #83a598
@@ -360,4 +367,7 @@ client.focused #8ec07c #8ec07c #665c54 #8ec07c
 #
 ## onedark borders
 # client.focused #979eab #979eab #393e48 #979eab
+#
+# Catppuccin-Macchiato
+client.focused #B7BDF8 #B7BDF8 #6E738D #B7BDF8 
 
