--- a/config/aerospace/aerospace.toml
+++ b/config/aerospace/aerospace.toml
@@ -17,7 +17,7 @@ after-login-command = []
 # JankyBorders has a built-in detection of already running process,
 # so it won't be run twice on AeroSpace restart
 after-startup-command = [
-  'exec-and-forget borders active_color=0xff8ec07c inactive_color=0x00000000 width=2.0 style=round hidpi=on order=above',
+  'exec-and-forget borders active_color=0xff83a598 inactive_color=0x00000000 width=4.0 style=round hidpi=on order=above',
 ]
 
 # Start AeroSpace at login
@@ -86,9 +86,10 @@ on-focus-changed = "move-mouse window-lazy-center"
 5 = ['main', '^built-in retina display$']
 6 = ['main', '^built-in retina display$']
 7 = ['main', '^built-in retina display$']
-8 = ['secondary', 'main', '^built-in retina display$']
-9 = ['secondary', 'main', '^built-in retina display$']
-10 = ['secondary', 'main', '^built-in retina display$']
+8 = ['main', '^built-in retina display$']
+9 = ['main', '^built-in retina display$']
+10 = ['main', '^built-in retina display$']
+B = ['secondary','^built-in retina display$' ]
 
 [gaps]
 inner.horizontal = 8
@@ -149,16 +150,16 @@ alt-shift-space = 'layout floating tiling' # 'floating toggle' in i3 - sway
 
 # Moving; See: https://nikitabobko.github.io/AeroSpace/commands#focus
 
-# alt-h = 'focus --boundaries all-monitors-outer-frame --boundaries-action wrap-around-all-monitors left'
-# alt-j = 'focus --boundaries all-monitors-outer-frame --boundaries-action wrap-around-all-monitors down'
-# alt-k = 'focus --boundaries all-monitors-outer-frame --boundaries-action wrap-around-all-monitors up'
-# alt-l = 'focus --boundaries all-monitors-outer-frame --boundaries-action wrap-around-all-monitors right'
+alt-h = 'focus --boundaries all-monitors-outer-frame --boundaries-action wrap-around-all-monitors left'
+alt-j = 'focus --boundaries all-monitors-outer-frame --boundaries-action wrap-around-all-monitors down'
+alt-k = 'focus --boundaries all-monitors-outer-frame --boundaries-action wrap-around-all-monitors up'
+alt-l = 'focus --boundaries all-monitors-outer-frame --boundaries-action wrap-around-all-monitors right'
 #
 # Single Monitor Setup
-alt-h = 'focus left'
-alt-j = 'focus down'
-alt-k = 'focus up'
-alt-l = 'focus right'
+# alt-h = 'focus left'
+# alt-j = 'focus down'
+# alt-k = 'focus up'
+# alt-l = 'focus right'
 
 alt-shift-h = 'move left'
 alt-shift-j = 'move down'
@@ -186,6 +187,7 @@ alt-7 = 'workspace 7'
 alt-8 = 'workspace 8'
 alt-9 = 'workspace 9'
 alt-0 = 'workspace 10'
+alt-b = 'workspace B'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#move-node-to-workspace
 alt-shift-1 = 'move-node-to-workspace 1'
@@ -198,16 +200,17 @@ alt-shift-7 = 'move-node-to-workspace 7'
 alt-shift-8 = 'move-node-to-workspace 8'
 alt-shift-9 = 'move-node-to-workspace 9'
 alt-shift-0 = 'move-node-to-workspace 10'
+alt-shift-b = 'move-node-to-workspace B'
 
 alt-tab = 'workspace-back-and-forth'
 alt-shift-tab = 'move-workspace-to-monitor --wrap-around next'
 
 
 # resizing in normal
-alt-ctrl-h = 'resize width -50'
-alt-ctrl-j = 'resize height +50'
-alt-ctrl-k = 'resize height -50'
-alt-ctrl-l = 'resize width +50'
+alt-ctrl-h = 'resize width -100'
+alt-ctrl-j = 'resize height +100'
+alt-ctrl-k = 'resize height -100'
+alt-ctrl-l = 'resize width +100'
 alt-ctrl-b = 'balance-sizes'
 
 alt-enter = '''exec-and-forget osascript -e '
@@ -250,3 +253,7 @@ run = 'move-node-to-workspace 4'
 [[on-window-detected]]
 if.app-id = 'com.valvesoftware.steam'
 run = ['layout tiling', 'move-node-to-workspace 8']
+
+[[on-window-detected]]
+if.app-id = 'com.autodesk.fusion360'
+run = ['layout floating']
