--- a/config/kitty/general.conf
+++ b/config/kitty/general.conf
@@ -1,9 +1,4 @@
-include themes/gruvbox_dark_hard.conf
-# include themes/catppuccin-macchiato.conf
-#gruvbox my beloved
-# include kitty-themes/themes/kanagawa.conf
-# include kitty-themes/themes/Catppuccin-Macchiato.conf
-# include kitty-themes/themes/Catppuccin-Mocha.conf
+include themes/tokyonight/tokyonight_moon.conf
 
 # Fonts
 # kitty list-fonts
@@ -19,7 +14,7 @@ cursor none
 disable_ligatures cursor
 
 # background
-background_opacity .95
+background_opacity 1.0
 dynamic_background_opacity yes
 
 # Misc
@@ -44,4 +39,3 @@ input_delay 0
 repaint_delay 2
 sync_to_monitor no
 wayland_enable_ime no
-
