--- a/config/kitty/themes/gruvbox_dark_hard.conf
+++ b/config/kitty/themes/gruvbox_dark_hard.conf
@@ -19,6 +19,11 @@ color0 #1d2021
 color1 #fb4934
 color2 #b8bb26
 color3 #fabd2f
+# color3 #E8B226
+# color3 #DDB326
+# color3 #EBBE4A too bright
+# color3  #F0BD48 too bright
+# color3 #EDC241 no
 color4 #83a598
 color5 #d3869b
 color6 #8ec07c
