--- a/config/kitty/themes/OneDark.conf
+++ b/config/kitty/themes/OneDark.conf
@@ -5,7 +5,7 @@
 foreground #979eab
 background #282c34
 cursor #cccccc
-color0 #282c34
+color0 #31353f
 color1 #e06c75
 color2 #98c379
 color3 #e5c07b
