i mean at this point i don't even know why i bother with switching out of gruvbox

--- a/config/kitty/general.conf
+++ b/config/kitty/general.conf
@@ -1,4 +1,5 @@
-include themes/tokyonight/tokyonight_moon.conf
+# include themes/tokyonight/tokyonight_moon.conf
+include themes/gruvbox_dark_hard.conf
 
 # Fonts
 # kitty list-fonts
