--- a/config/kitty/general.conf
+++ b/config/kitty/general.conf
@@ -15,7 +15,7 @@ cursor none
 disable_ligatures cursor
 
 # background
-background_opacity 1.0
+background_opacity .96
 dynamic_background_opacity yes
 
 # Misc
