--- a/config/sway/config
+++ b/config/sway/config
@@ -6,7 +6,7 @@
 
 ### Wallpaper
 
-output * bg ~/Pictures/swaybg/camera-1130731.jpg fill
+output * bg ~/Pictures/macos/wp10117191-macos-dark-wallpapers.jpg fill
 
 ### Output configuration
 
@@ -327,13 +327,17 @@ mode "layout" {
 
 # bindsym $mod+alt+ctrl+l mode "layout"
 
-  bindsym --locked XF86AudioMute exec 'pamixer --toggle-mute'
-  bindsym --locked XF86AudioLowerVolume exec 'pamixer --decrease 5'
-  bindsym --locked XF86AudioRaiseVolume exec 'pamixer --increase 5'
-  bindsym --locked XF86AudioMicMute exec 'pamixer --default-source --toggle-mute'
+bindsym --locked XF86AudioMute exec 'pamixer --toggle-mute'
+bindsym --locked XF86AudioLowerVolume exec 'pamixer --decrease 5'
+bindsym --locked XF86AudioRaiseVolume exec 'pamixer --increase 5'
+bindsym --locked XF86AudioMicMute exec 'pamixer --default-source --toggle-mute'
 
-  bindsym --locked XF86MonBrightnessDown exec 'light -U 5.00'
-  bindsym --locked XF86MonBrightnessUp exec 'light -A 5.00'
+bindsym --locked XF86MonBrightnessDown exec 'light -U 5.00'
+bindsym --locked XF86MonBrightnessUp exec 'light -A 5.00'
+
+bindsym alt+f10 exec 'pactl set-sink-mute @DEFAULT_SINK@ toggle'
+bindsym alt+F11 exec 'pactl set-sink-volume @DEFAULT_SINK@ -10%'
+bindsym alt+F12 exec 'pactl set-sink-volume @DEFAULT_SINK@ +10%'
 
 bar {
 	swaybar_command waybar
