--- a/config/waybar/config
+++ b/config/waybar/config
@@ -5,7 +5,7 @@
     "sway/window"
   ],
   "modules-center": [
-    "sway/mode",
+    "sway/mode"
   ],
   "modules-right": [
     "sway/workspaces",
@@ -14,7 +14,8 @@
     "pulseaudio",
     "network",
     "battery",
-    "clock"
+    "clock",
+    "custom/notification"
   ],
   "height": 24,
   "sway/window": {
@@ -98,5 +99,25 @@
   },
   "clock": {
     "format": "<span font_weight=\"600\">{:%a %b. %d %I:%M %p}</span>"
+  },
+  "custom/notification": {
+    "tooltip": true,
+    "format": "{icon}",
+    "format-icons": {
+      "notification": "󱅫",
+      "none": "󰂜",
+      "dnd-notification": "󰂠",
+      "dnd-none": "󰪓",
+      "inhibited-notification": "󰂛",
+      "inhibited-none": "󰪑",
+      "dnd-inhibited-notification": "󰂛",
+      "dnd-inhibited-none": "󰪑"
+    },
+    "return-type": "json",
+    "exec-if": "which swaync-client",
+    "exec": "swaync-client -swb",
+    "on-click": "swaync-client -t -sw",
+    "on-click-right": "swaync-client -d -sw",
+    "escape": true
   }
 }
